--- a/src/views/partials/forum2_preview.hbs
+++ b/src/views/partials/forum2_preview.hbs
@@ -5,7 +5,7 @@
 			<div class="info">
 				<p class="course">{{course}}</p>
 				<p class="place">{{location}}</p>
-				<p class="date">{{formatDate postDate}}</p>
+				<p class="date">{{postDate}}</p>
 				<p class="comments">1 comments</p>
 			</div>
 		</a>
