--- a/src/views/partials/forum3_preview.hbs
+++ b/src/views/partials/forum3_preview.hbs
@@ -5,7 +5,7 @@
 		</div>
 		<div class="info">
 			<p class="degProgram">{{course}}</p>
-			<p class="dateTime">{{formatDate postDate}}</p>
+			<p class="dateTime">{{postDate}}</p>
 			<p class="noComments">3 comments</p>
 		</div>
 	</a>
